macOS distribution fixed and all warnings removed. Upgrade to LWGJL 3.4.2.